Add js to display future

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
   <title>Fortune Teller Quiz</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
         <input type="checkbox" name="lucky-events" value="promotion">Getting a promotion.<br>
         <input type="checkbox" name="lucky-events" value="penny">Finding a penny.<br>
       </div>
-      <button type="submit">Submit Survey</button>
+      <button type="submit">Predict My Week!</button>
     </form>
 
     <div id="results"></div>
